# kctools

./: .gitignore  LICENSE  README.md  kctools.py  pyproject.toml  setup.py
kctools/: __init__.py  dcomp.py  kctools.py
kctools/classes/: __init__.py  addict.py  adict.py  cache.py  cuke.py  dict.py  dicts.py  lock.py  map.py  rec.py  reg.py  roll.py  sub.py  vec.py  vec2.py
kctools/classes/data/: config.py  names.py
kctools/classes/subconf/: __init__.py  names.txt
